FIles Google Home Page

--- a/capter1/google-homepage/index.html
+++ b/capter1/google-homepage/index.html
@@ -1,1 +1,88 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+    <header>
+        <div class="nav-container">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="text-link">
+                <p>About</p>
+            </a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="text-link">
+                <p>Store</p>
+            </a>
+        </div>
+        <nav class="nav-container nav-container-second">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="text-link">Gmail</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="text-link">Images</a>
+            <a href="#" class="icon-link">
+                <i class="fa-solid fa-flask "></i>
+            </a>
+            <a href="#" class="icon-link">
+                <i class="fa-solid fa-border-all "></i>
+            </a>
+            <button class="img-button">
+                <img src="/public/download.jpeg" alt="image profile">
+            </button>
+        </nav>
+    </header>
+    <main>
+        <h1 class="title-text">Google</h1>
+        <div class="input-bar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input title="Search">
+            <div>
+                <button class="input-icon">
+                    <i class="fa-solid fa-microphone"></i>
+                </button>
+                <button class="input-icon">
+                    <i class="fa-solid fa-camera"></i>
+                </button>
+            </div>
+        </div>
+        <div class="button-grid">
+            <button>
+                <p>Google Search</p>
+            </button>
+            <button>
+                <p>Im feel Lucky</p>
+            </button>
+        </div>
+        <p class="language-text">Google offered in: <a href="#" class="language-link">maori</a></p>
+    </main>
+    <footer >
+        <div>
+            <p>United States Of America</p>
+        </div>
+        <div class="footer-grid">
+            <div class="footer-links">
+                <a href="">
+                    <p>Advertising</p>
+                </a>
+                <a href="">
+                    <p>Bussiness</p>
+                </a>
+                <a href="">
+                    <p>How Search Works</p>
+                </a>
+            </div>
+            <div class="footer-links">
+                <a href="">
+                    <p>Privacy</p>
+                </a>
+                <a href="">
+                    <p>terms</p>
+                </a>
+                <a href="">
+                    <p>Settings</p>
+                </a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
